# backplane

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  basedpyright-tests.json  deep-research-report.md  docker-compose.yml  justfile  non-blocking-task-creation-handover.md  prompts.md  pyproject.toml
.cursor/rules/: agent-editing-autonomy.mdc  mcp-instructions-sync.mdc  python-field-validators.mdc  python-unit-tests.mdc  test-production-boundaries.mdc  type-checker-fix-discipline.mdc
.github/workflows/: auto_create_pr.yml  pre-commit-autoupdate.yml  pre-commit-hooks.yml  semantic_release.yml  unit-tests.yml
deploy/: backplane.logrotate.tmpl  backplane.service.tmpl  obsidian-sync.service.tmpl  setup.sh
scripts/: authentik-backplane-mcp.env.example  backplane-public.logrotate.tmpl  backplane-public.service.tmpl  backplane.logrotate  backplane.service  backplane.service.tmpl  obsidian-sync.logrotate  obsidian-sync.logrotate.tmpl  obsidian-sync.service  obsidian-sync.service.tmpl  setup.sh  update.sh
scripts/dev/: __init__.py  mcp_catalog.py  update_readme_mcp_catalog.py
scripts/fixtures/readme-vault/.obsidian/: daily-notes.json
scripts/fixtures/readme-vault/Templates/: Daily Note.md  Domain.md  Person.md  Project.md  Resource.md
src/: __init__.py
src/backplane/: __init__.py  sample.yaml
src/backplane/api/: Dockerfile  __init__.py  main.py
src/backplane/api/routes/: __init__.py  obsidian.py
src/backplane/api/routes/obsidian/: __init__.py  route.py
src/backplane/docs/: __init__.py  update_readme_mcp_catalog.py
src/backplane/mcp/: __init__.py  __main__.py  app_factory.py  asgi.py  auth.py  debug_http.py  instructions.py  obsidian.py  public.py  public_debug.py  server.py  tasks.py  vault_entities.py  vault_search.py
src/backplane/mcp/upstreams/: __init__.py  ha.py
src/backplane/services/: __init__.py  home_assistant.py  obsidian.py  tasks.py  vault_entities.py  vault_search.py
src/backplane/utils/: __init__.py  async_path.py  enums.py  exceptions.py  helpers.py  kanban.py  markdown.py  settings.py  yaml.py
src/backplane/utils/helpers/: __init__.py  dttm.py  files.py  obsidian.py  pydantic_validators.py  slug.py
tests/: conftest.py
tests/backplane/docs/: test__mcp_catalog.py  test__update_readme_mcp_catalog.py
tests/backplane/mcp/: conftest.py  test__browser_mcp_cors.py  test__create_private_mcp_server.py  test__create_public_mcp_app.py  test__create_public_mcp_auth.py  test__mcp_path_oauth_metadata_route.py  test__oauth_browser_cors.py  test__public_mcp_oauth_http.py  test__resource_echo_token_handler.py
tests/backplane/mcp/obsidian/: test__add_to_daily_note.py  test__move_note_tool.py
tests/backplane/mcp/tasks/: conftest.py  test__create_task.py
tests/backplane/mcp/upstreams/: conftest.py  test__ha_mount.py
tests/backplane/mcp/vault_entities/: conftest.py  test__vault_entity_tools.py
tests/backplane/mcp/vault_search/: test__vault_search_tools.py
tests/backplane/services/obsidian/: test__move_note.py
tests/backplane/services/tasks/: conftest.py  test__annotate_capture.py  test__build_task_note.py  test__create_task_linking.py  test__create_task_metadata_source.py  test__create_task_orchestration.py  test__ensure_stub.py  test__extract_metadata.py  test__find_match.py  test__find_match_logging.py  test__link_capture.py  test__list_vault_entity_names.py  test__log_metadata_agent_run.py  test__metadata_catalog_prompt.py  test__normalize_domains_and_resources.py  test__parse_inbox.py  test__truncate_for_log.py
tests/backplane/services/vault_entities/: conftest.py  test__create_entity.py  test__get_and_update_entity.py  test__list_entities.py  test__note_title_from_markdown.py  test__resolve_entity_path.py
tests/backplane/services/vault_search/: test__find_notes_by_title.py  test__search_note_contents.py
tests/backplane/utils/async_path/: conftest.py  test__async_path.py
tests/backplane/utils/exceptions/: test__section_not_found_error.py
tests/backplane/utils/helpers/: test__build_entity_wikilink.py  test__parse_comma_separated_list.py
tests/backplane/utils/helpers/dttm/: test__format_human_date.py  test__format_obsidian_moment_date.py  test__ordinal_day_of_month.py  test__ordinal_suffix_for_day.py  test__substitute_obsidian_core_date_variables.py  test__substitute_vault_entity_template.py  test__today.py
tests/backplane/utils/helpers/files/: test__atomic_write_text.py  test__resolve_under_root.py
tests/backplane/utils/helpers/slug/: test__safe_slug.py
tests/backplane/utils/kanban/: test__add_card_to_list.py
tests/backplane/utils/markdown/: test__get_section.py  test__markdown_document.py  test__note_title_from_markdown.py
tests/backplane/utils/settings/: test__ha_mcp_settings.py  test__mcp_oauth_settings.py
tests/backplane/utils/yaml/: test__yaml_loader.py
tests/scripts/: conftest.py
tests/scripts/dev/: test__mcp_catalog.py  test__update_readme_mcp_catalog.py
tests/scripts/dev/mcp_catalog/: test__mcp_catalog.py
tests/scripts/dev/update_readme_mcp_catalog/: test__update_readme_mcp_catalog.py
