[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backplane"]

[project]
name = "backplane"
version = "0.4.3"
description = "AI-facing gateway for local services and smart home orchestration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.0",
    "fastmcp>=3.3.1",
    "loguru>=0.7.3",
    "markdown-it-py>=4.2.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.1",
    "ruamel-yaml>=0.19.1",
    "pydantic-ai>=1.99.0",
    "rapidfuzz>=3.0",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "diff-cover>=10.2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.14",
    "pytest-randomly>=4.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-n",
    "auto",
    "-vvv",
    "-rfs",
    "--strict-markers",
    "--strict-config",
]
env = [
    "OBSIDIAN_VAULT_PATH=/tmp/backplane-test-vault",
    "LOCAL_TIMEZONE=UTC",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# Tool Configs

[tool.basedpyright]
typeCheckingMode = "all"

include = ["src"]

executionEnvironments = [
  { root = "src" },
]

reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnnecessaryTypeIgnoreComment = "error"

pythonVersion = "3.14"


[tool.ruff]
fix = true
preview = true
line-length = 90
lint.select = ["ALL"]
lint.ignore = ["CPY", "TD002", "EM101", "PLW0717"]

[tool.ruff.lint.pycodestyle]
max-line-length = 115

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 15
max-public-methods = 150

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "INP001", "PLC2701", "DOC201", "S108"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
  "DeclarativeBase",
  "Base",
  "TypedDict",
]
quote-annotations = true # https://docs.astral.sh/ruff/settings/#lint_flake8-type-checking_quote-annotations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100


[tool.codespell]
ignore-words-list = "tmpl,homeassistant,nd"

[tool.semantic_release]
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/backplane/__init__.py:__version__",
]
major_on_zero = false
allow_zero_version = true
build_command = """
    python -m pip install uv
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
  """

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "deps",
  "docs",
  "hotfix",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["deps", "fix", "hotfix", "perf", "build"]
parse_squash_commits = false
